// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format 1`] = `
"Unexpected token (1:9)
> 1 | export *, {} from "foo";
    |         ^
Cause: Unexpected token (1:8)"
`;

exports[`snippet: #1 format 1`] = `
"Unexpected token, expected "from" (1:21)
> 1 | export * as foo, {} from "foo";
    |                     ^
Cause: Unexpected token, expected "from" (1:20)"
`;

exports[`snippet: #2 format 1`] = `
"Unexpected token (1:9)
> 1 | export *, {bar} from "foo";
    |         ^
Cause: Unexpected token (1:8)"
`;

exports[`snippet: #3 format 1`] = `
"Unexpected token, expected "from" (1:24)
> 1 | export * as foo, {bar} from "foo";
    |                        ^
Cause: Unexpected token, expected "from" (1:23)"
`;
